# ExSeisDat

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .mailmap  CMakeLists.txt  LICENSE  README.md  compare.sh  compiler.cfg  makefile  makefile.mk  mod_gnu  mod_intel  test.cc
api/: #set.cc#  (+18 more)
apps/: 4dcore.cc  4dcore.hh  4dio.cc  4dio.hh  CMakeLists.txt  assess.cc  concatenate.cc  exseis-assess.main.cc  exseis-concatenate.main.cc  exseis-extract-metadata.main.cc  exseis-filemake.main.cc  exseis-fourdbin.main.cc  exseis-makerep.main.cc  exseis-minmax.main.cc  exseis-segy2kml.main.cc  exseis-sort.main.cc  exseis-traceanalysis.main.cc  exseis-verifysort.main.cc  extract-metadata.main.cc  filemake.cc  fourdbin.cc  minmax.cc  radon.cc  segy2kml.cc  sglobal.cc  sglobal.hh  sort.cc  traceanalysis.cc  verifysort.cc
apps/fourdbin/: 4d.cc  4d.hh  4dcore.cc  4dcore.hh  4dio.cc  4dio.hh
doc/: CMakeLists.txt  Doxyfile  Doxyfile-man.in  Doxyfile.in  DoxyfileAPI  namespaces.dox  parse_example.cmake
doc/architecture/: BlockLayer.dot  FileLayer.dot  ObjectLayer.dot  SetLayer.dot  TraceLayer.dot  makefile
doc/style/: license  projectguide.html
examples/: CMakeLists.txt  README.md  cexample1  cexample2  cminmax  cmodprm  creadwrite.c  csort  example1  example1.c  example1.cc  example2.c  exampleCreateFile.c  exampleCreateFile.cc  exampleFilterTaper.cc  exampleSort.c  exampleSort.cc  hello.c  hello_world.c  hellow  makefile  minmax  minmax.c  minmax.cc  modprm.c  sort  sort.c  sort.cc
test/: #testOut#  CMakeLists.txt  README  README.md  data.cc  datampiio.cc  datampiioread.cc  datampiiotest.hh  datampiiowrite.cc  datatype.cc  dynsegymd.cc  dynsegymdtest.hh  extract  extract.c  file.cc  filesegy.cc  filesegyinteg.cc  filesegyintegread.cc  filesegyintegwrite.cc  filesegyread.cc  filesegytest.hh  filesegywrite.cc  genfiles.c  ibm-compare.cc-part  ibm.cc-part  main.cc  makefile  makefile.mk  makeunittest  object.cc  objsegy.cc  objsegyinteg.cc  objsegyintegread.cc  objsegyintegwrite.cc  objsegymeta.cc  objsegyread.cc  objsegytest.hh  objsegywrite.cc  opstest.cc  outtest  (+10 more)
test/cmake/add_subdirectory/: CMakeLists.txt  dummy.cc  test.cmake
test/cmake/find_package/: CMakeLists.txt  dummy.cc  test.cmake
test/cwraptests/: exseisstub.cc  filestub.cc  main.c  main.cc  paramstub.cc  readdirectstub.cc  rulestub.cc  setstub.cc  setstub.hh  writedirectstub.cc
test/data/: data.cc  datampiio.cc
test/file/: file.cc  filesegy.cc
test/main/: main.cc  selftests.cc
test/object/: makefile  object.cc  objsegy.cc
test/piolstub/: compare_symbols.sh  exseisstub.cc  exseisstub.hh  filestub.cc  filestub.hh  paramstub.cc  paramstub.hh  readdirectstub.cc  readdirectstub.hh  rulestub.cc  rulestub.hh  setstub.cc  setstub.hh  stubtools.hh  writedirectstub.cc  writedirectstub.hh
test/spectests/: data.cc  datampiioread.cc  datampiiotest.hh  datampiiowrite.cc  datatype.cc  dynsegymd.cc  dynsegymdtest.hh  file.cc  filesegyintegread.cc  filesegyintegwrite.cc  filesegyread.cc  filesegytest.hh  filesegywrite.cc  ibm-compare.hh  ibm.hh  main.cc  objsegyintegread.cc  objsegyintegwrite.cc  objsegymeta.cc  objsegyread.cc  objsegytest.hh  objsegywrite.cc  opstest.cc  segy.cc  segymd.cc  segymdextra.cc  segymdextra.hh  selftests.cc  set.cc  settest.hh  tglobal.cc  tglobal.hh
test/spectests-legacy/: datatype.cc  dynsegymd.cc  dynsegymdtest.hh  filesegyintegread.cc  filesegyintegwrite.cc  filesegytest.hh  filesegywrite.cc  main.cc  objsegyintegread.cc  objsegymeta.cc  objsegytest.hh  opstest.cc  segy.cc  segymdextra.hh  settest.hh  tglobal.cc
test/spectests-legacy/piol/: Trace_header_offsets.test.cc  Trace_metadata_key.test.cc
test/spectests-legacy/piol/operations/: Sort_type.test.cc
test/spectests-legacy/utils/: Type.test.cc  typedefs.test.cc
test/spectests-legacy/utils/logging/: Verbosity.test.cc
test/spectests/piol/: Meta.test.cc  Tr.test.cc  Trace_header_offsets.test.cc  Trace_metadata_key.test.cc
test/spectests/piol/operations/: SortType.test.cc  Sort_type.test.cc
test/spectests/utils/: Type.test.cc  typedefs.test.cc
test/spectests/utils/logging/: Verbosity.test.cc
test/spectests/utils/signal_processing/: Gain_function.test.cc  Taper_function.test.cc  mute.test.cc
test/src/exseis/test/: Buffer.hh  Catch_reporter_mpi.hh  IBM_number.hh  Index_hash.hh  Test_case_cache.hh  catch2.hh
test/src/exseis/test/segy/: Segy_file_generator.hh
test/src/exseisdat/test/: Buffer.hh  Catch_reporter_mpi.hh  IBM_number.hh  Index_hash.hh  Test_case_cache.hh  catch2.hh
test/src/exseisdat/test/segy/: Segy_file_generator.hh
test/sys/: warncheck.sh
test/unit/: blocktest.cc  compiler.cfg  mainmock.cc  makefile
test/unit/exseis/piol/file/: Input_file_segy.test.cc  Output_file_segy.test.cc
test/unit/exseis/test/: Buffer.test.cc  Index_hash.test.cc
test/unit/exseisdat/test/: Buffer.test.cc  Index_hash.test.cc
test/wraptests/: .clang-tidy  cfileapiwrap.cc  checkreturnlistener.cc  checkreturnlistener.hh  compare_symbols.sh  exseis.cc  exseiswraptest.cc  exseiswraptest.hh  getminmax.cc  getminmaxwraptests.cc  getminmaxwraptests.hh  googletest_variable_instances.cc  googletest_variable_instances.hh  intercepted_c_bindings.cc  minmax.cc  mockexseis.cc  mockexseis.hh  mockgetminmax.cc  mockgetminmax.hh  mockminmax.cc  mockminmax.hh  mockparam.cc  mockparam.hh  mockreaddirect.cc  mockreaddirect.hh  mockreadinterface.cc  mockreadinterface.hh  mockrule.cc  mockrule.hh  mockset.cc  mockset.hh  mockwritedirect.cc  mockwritedirect.hh  mockwriteinterface.cc  mockwriteinterface.hh  param.cc  paramwraptests.cc  paramwraptests.hh  printers.cc  printers.hh  (+24 more)
util/: #fourdbin.cc#  4d.cc  4d.hh  4dcore.cc  4dcore.hh  4dio.cc  4dio.hh  CMakeLists.txt  assess  assess.cc  compile.sh  concatenate  concatenate.cc  creadwrite  creadwrite.c  cropen  cropen.c  ctest.c  ctest.h  ctestReadWrite.sh  dir.sh  example1.c  example1.cc  example2.c  extract-metadata.main.cc  farm.sh  filemake  filemake.cc  fourdbin  fourdbin.cc  fourdbinRestart.cc  genenv.sh  make.sh  makefile  makerep.cc  makerepn2  metaseg  min.cc  minmax  minmax.cc  (+16 more)
(+747 files in other folders)
